--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </body>
 
   <script>
-    const response = fetch("http://localhost:3000/api/auth/users-2")
-      .then((res) => res.json())
-      .then((data) => console.log(data));
+    const response = fetch("http://localhost:3000/api/auth/users-2").then(
+      (res) => res.json()
+    );
   </script>
 </html>
